# SAQR-Secure-Agent-for-Quantified-Risk

./: .gitignore  GOOGLE_AI_STUDIO_BRIEF.md  README.md  docker-compose.prod.yml  docker-compose.yml
services/behavioral-dna-engine/: .env.example  Dockerfile  pyproject.toml
services/behavioral-dna-engine/app/: config.py  main.py  wiring.py
services/behavioral-dna-engine/app/api/: deps.py  schemas.py
services/behavioral-dna-engine/app/api/routes/: backfill.py  health.py  profiles.py  scoring.py  tokens.py
services/behavioral-dna-engine/app/domain/: entities.py  ports.py
services/behavioral-dna-engine/app/features/: amount_features.py  base.py  beneficiary_features.py  defaults.py  reserved.py  structural_features.py  velocity_features.py
services/behavioral-dna-engine/app/infra/cache/: redis_cache.py
services/behavioral-dna-engine/app/infra/db/: base.py  checkpoint_store.py  models.py  postgres_customer_account_repository.py  postgres_profile_repository.py  token_repository.py
services/behavioral-dna-engine/app/infra/events/: kafka_publisher.py  noop_publisher.py
services/behavioral-dna-engine/app/infra/memory/: in_memory_cache.py  in_memory_customer_account_repository.py  in_memory_profile_repository.py  in_memory_token_repository.py
services/behavioral-dna-engine/app/ingestion/: csv_source.py  kafka_source.py  run_backfill.py
services/behavioral-dna-engine/app/profile/: comparator.py  confidence.py  explainer.py  hashing.py  service.py  stats.py  updater.py
services/behavioral-dna-engine/app/token_station/: generator.py  service.py
services/behavioral-dna-engine/migrations/: env.py
services/behavioral-dna-engine/migrations/versions/: 6060d287acbf_initial_schema.py  a1cd0ea8d74e_backfill_checkpoints_and_source_tx_id.py  c7a3f9d2e1b4_token_generation_station.py
services/behavioral-dna-engine/saqr_behavioral_dna_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/behavioral-dna-engine/tests/: conftest.py  test_backfill_progress.py  test_comparator.py  test_csv_source_resumable.py  test_customer_account_mapping.py  test_feature_extraction.py  test_hash_chain.py  test_no_fraud_label_leakage.py  test_shard_worker.py  test_stats.py  test_token_station.py  test_versioning.py
services/compliance-intelligence-engine/: Dockerfile  pyproject.toml
services/compliance-intelligence-engine/app/: config.py  main.py  service.py  wiring.py
services/compliance-intelligence-engine/app/api/: deps.py
services/compliance-intelligence-engine/app/domain/: entities.py  ports.py
services/compliance-intelligence-engine/app/policy/: engine.py  explainer.py  registry_loader.py  triggers.py
services/compliance-intelligence-engine/saqr_compliance_intelligence_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/compliance-intelligence-engine/tests/: conftest.py  test_explainer.py  test_integration.py  test_registry_loader.py  test_triggers_and_engine.py
services/decision-intelligence-engine/: Dockerfile  pyproject.toml
services/decision-intelligence-engine/app/: config.py  main.py  service.py  wiring.py
services/decision-intelligence-engine/app/api/: deps.py
services/decision-intelligence-engine/app/domain/: entities.py  ports.py
services/decision-intelligence-engine/app/fusion/: config.py  decision.py  engine.py  explainer.py
services/decision-intelligence-engine/saqr_decision_intelligence_engine.egg-info/: PKG-INFO  SOURCES.txt
services/decision-intelligence-engine/tests/: conftest.py  test_decision_resolution.py  test_explainer.py  test_fusion_engine.py  test_integration.py
services/graph-intelligence-engine/: Dockerfile  pyproject.toml
services/graph-intelligence-engine/app/: config.py  main.py  runners.py  wiring.py
services/graph-intelligence-engine/app/api/: deps.py
services/graph-intelligence-engine/app/domain/: entities.py  ports.py
services/graph-intelligence-engine/app/graph/: cold_path.py  complexity.py  edge_updater.py  enrichers.py  hot_path.py  stats.py  trust_score.py
services/graph-intelligence-engine/saqr_graph_intelligence_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/graph-intelligence-engine/tests/: test_complexity.py  test_edge_updater.py  test_stats.py  test_trust_score.py
services/ingestion-gateway/: Dockerfile  pyproject.toml
services/ingestion-gateway/app/: config.py  main.py  schema.py
(+134 files in other folders)
