[project]
name = "saqr-graph-intelligence-engine"
version = "0.1.0"
description = "SAQR Agent 2 - Graph Intelligence Engine: maintains a temporal financial knowledge graph and reports structural intelligence, without detecting fraud or making decisions."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "neo4j>=5.24,<6.0",
    "aiokafka>=0.12,<0.13",
    "orjson>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
